Mon Feb 16 00:11:29 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c, src/plugin.c: minor fixes.  Display help for
	  plugin loading, don't do lazy binding (can lead to stupid crashes,
	  better just not load bad plugins) also pass the LOCAL flag to
	  plugins to be safer.

	* src/Makefile.am: add the NOGUI libs to gnome-genius.  That will
	  make plugins work again

Sun Feb 15 20:05:05 2009  Jiri (George) Lebl <jirka@5z.com>

	* configure.in, src/gnome-genius.c: small cleanup

Sun Feb 15 19:50:15 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix tlen default (to be 5 not 0.1), tinc default is
	  set according to tlen

Sun Feb 15 18:51:42 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Add solver dialog to vectorfields.  Also add
	  VectorfieldDrawSolution and VectorfieldClearSolutions.  Also draw
	  arrows with proper arrows not triangles.  Change default to not
	  normalize arrow length, that's better default I think.

	* help/C/genius.xml, help/C/gel-function-list.xml: update

	* ve/ve-nongnome.c: remove some unused functions

Sun Feb 15 15:18:20 2009  Jiri (George) Lebl <jirka@5z.com>

	* configure.in: raise version

	* configure.in, src/gnome-genius.c: finish the de-libgnome(ui)ization
	  And remove the libgnome(ui) dep.  Removes 14 libs from the output
	  of 'ldd'

	* ve/viciousui.h: remove libgnome include

Sun Feb 15 11:25:47 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: in the event hook, handle events until all
	  handled, fixes "hangs" or extreme ui slowdowns
	  when event hook is not run often enough

	* ve/ve-miscui.[ch]: steal gtk_dialog_run and do
	  ve_dialog_run_nonmodal.  This way we can interrupt a tight loop
	  with AskString's in it

	* src/gnome-genius.c: start implementing a window with GtkUIManager
	  to get rid of libgnomeui dep.

Fri Feb 13 14:51:43 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: use gtk_show_uri to show help
	  when gtk is high enough version
