@@ -1,3 +1,11 @@
+Mon Feb 16 01:09:16 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: add padding to string query dialogs.  Add stock
+	  plot icon
+
+	* pixmaps/*/genius-stock-plot.png: Draw a simple plot icon for the
+	  menu/toolbar
+
 Mon Feb 16 00:11:29 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c, src/plugin.c: minor fixes.  Display help for
